tests/fixtures/invalid/min_bytes_none.py
# Cannot call min() with Bytes, None
x = min(b"hello", None)
